# corruption-calculator

./: Dockerfile  main.py  pyproject.toml
templates/: index.html
