[project]
name = "test-vps-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "fastapi>=0.115.8",
    "jinja2>=3.1.5",
    "openai>=1.63.2",
    "pydantic>=2.10.6",
    "requests>=2.32.3",
    "selenium>=4.28.1",
    "uvicorn>=0.34.0",
    "webdriver-manager>=4.0.2",
]
